Change dark color

--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -19,9 +19,9 @@ body {
 
 .theme-button {
   color: #f4f4f4;
-  background: #444;
+  background: #21262d;
 }
 
 .theme-button:hover {
-  background: #555;
+  background: #30363d;
 }
