--- a/assets/sass/light.sass
+++ b/assets/sass/light.sass
@@ -15,7 +15,7 @@ body
 
 .theme-button
     color: #f4f4f4
-    background: #444
+    background: #21262d
 
 .theme-button:hover
-    background: #555
+    background: #30363d
